@@ -2413,6 +2413,83 @@ operator|.
 name|nextNum
 operator|++
 expr_stmt|;
+comment|// is there a insert in the subquery
+if|if
+condition|(
+name|qbp
+operator|.
+name|getIsSubQ
+argument_list|()
+condition|)
+block|{
+name|CommonTree
+name|ch
+init|=
+operator|(
+name|CommonTree
+operator|)
+name|ast
+operator|.
+name|getChild
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|(
+name|ch
+operator|.
+name|getToken
+argument_list|()
+operator|.
+name|getType
+argument_list|()
+operator|!=
+name|HiveParser
+operator|.
+name|TOK_DIR
+operator|)
+operator|||
+operator|(
+operator|(
+operator|(
+name|CommonTree
+operator|)
+name|ch
+operator|.
+name|getChild
+argument_list|(
+literal|0
+argument_list|)
+operator|)
+operator|.
+name|getToken
+argument_list|()
+operator|.
+name|getType
+argument_list|()
+operator|!=
+name|HiveParser
+operator|.
+name|TOK_TMP_FILE
+operator|)
+condition|)
+throw|throw
+operator|new
+name|SemanticException
+argument_list|(
+name|ErrorMsg
+operator|.
+name|NO_INSERT_INSUBQUERY
+operator|.
+name|getMsg
+argument_list|(
+name|ast
+argument_list|)
+argument_list|)
+throw|;
+block|}
 name|qbp
 operator|.
 name|setDestForClause
