@@ -1,0 +1,2 @@
+EXPLAIN
+SELECT * FROM (INSERT OVERWRITE TABLE src1 SELECT * FROM src ) y;
